--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
 		<label for="user">用户名</label><input type="text" id="user">
 	</div>
 	<div>
-		<label for="password">密&nbsp;&nbsp;&nbsp;码</label><input type="password" id="password">
+		<label for="password">密码</label><input type="password" id="password">
 	</div>
 	<div>
 		<button id="register">注册</button>
